--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -9,3 +9,5 @@ parameters:
     tmpDir: build/phpstan
     checkOctaneCompatibility: true
     checkModelProperties: true
+    ignoreErrors:
+        - '#Call to an undefined method Filament\\Forms\\Components\\Builder\\Block::faker\(\)#'
