--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -11,3 +11,4 @@ parameters:
     checkModelProperties: true
     ignoreErrors:
         - '#Call to an undefined method Filament\\Forms\\Components\\Builder\\Block::faker\(\)#'
+        - '#Call to an undefined method Filament\\Forms\\Components\\Field::faker\(\)#'
