--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -12,3 +12,7 @@ parameters:
     ignoreErrors:
         - '#Call to an undefined method Filament\\Forms\\Components\\Builder\\Block::faker\(\)#'
         - '#Call to an undefined method Filament\\Forms\\Components\\Field::faker\(\)#'
+        - '#Call to an undefined method Filament\\Forms\\Form::faker\(\)#'
+        - '#Call to an undefined method FilamentFaker\\Support\\Macros::faker\(\)#'
+        - '#Call to an undefined static method static\(FilamentFaker\\Support\\Macros\)::faker\(\)#'
+        - '#Call to an undefined static method static\(FilamentFaker\\Support\\Macros\)::make\(\)#'
