--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "require": {
         "php": "^8.1",
         "spatie/laravel-package-tools": "^1.14.0",
+        "illuminate/support": "^10.0",
         "illuminate/contracts": "^10.0",
         "filament/filament": "^3.0"
     },
@@ -41,6 +42,9 @@
         "phpstan/phpstan-phpunit": "^1.0"
     },
     "autoload": {
+        "files": [
+            "src/Support/helpers.php"
+        ],
         "psr-4": {
             "FilamentFaker\\": "src/"
         }
