--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,11 @@
     ],
     "require": {
         "php": "^8.1",
-        "spatie/laravel-package-tools": "^1.14.0",
-        "illuminate/support": "^10.0",
+        "filament/filament": "^3.0",
         "illuminate/contracts": "^10.0",
-        "filament/filament": "^3.0"
+        "illuminate/support": "^10.0",
+        "livewire/livewire": "^3.0",
+        "spatie/laravel-package-tools": "^1.14.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
