--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -13,6 +13,6 @@ parameters:
         - '#Call to an undefined method Filament\\Forms\\Components\\Builder\\Block::faker\(\)#'
         - '#Call to an undefined method Filament\\Forms\\Components\\Field::faker\(\)#'
         - '#Call to an undefined method Filament\\Forms\\Form::faker\(\)#'
-        - '#Call to an undefined method FilamentFaker\\Support\\Macros::faker\(\)#'
-        - '#Call to an undefined static method static\(FilamentFaker\\Support\\Macros\)::faker\(\)#'
-        - '#Call to an undefined static method static\(FilamentFaker\\Support\\Macros\)::make\(\)#'
+        - '#Call to an undefined method FilamentFaker\\FilamentFakerServiceProvider::faker\(\)#'
+        - '#Call to an undefined static method static\(FilamentFaker\\FilamentFakerServiceProvider\)::faker\(\)#'
+        - '#Call to an undefined static method static\(FilamentFaker\\FilamentFakerServiceProvider\)::make\(\)#'
