--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,26 +1,26 @@
 parameters:
 	ignoreErrors:
 		-
-			message: "#^Call to an undefined method FilamentFaker\\\\Support\\\\ComponentDecorator\\:\\:getAcceptedFileTypes\\(\\)\\.$#"
+			message: "#^Call to an undefined method FilamentFaker\\\\Contracts\\\\Decorators\\\\ComponentDecorator\\:\\:getAcceptedFileTypes\\(\\)\\.$#"
 			count: 1
 			path: src/ComponentDataGenerator.php
 
 		-
-			message: "#^Call to an undefined method FilamentFaker\\\\Support\\\\ComponentDecorator\\:\\:getFormat\\(\\)\\.$#"
+			message: "#^Call to an undefined method FilamentFaker\\\\Contracts\\\\Decorators\\\\ComponentDecorator\\:\\:getFormat\\(\\)\\.$#"
 			count: 1
 			path: src/ComponentDataGenerator.php
 
 		-
-			message: "#^Call to an undefined method FilamentFaker\\\\Support\\\\ComponentDecorator\\:\\:getOptions\\(\\)\\.$#"
+			message: "#^Call to an undefined method FilamentFaker\\\\Contracts\\\\Decorators\\\\ComponentDecorator\\:\\:getOptions\\(\\)\\.$#"
 			count: 2
 			path: src/ComponentDataGenerator.php
 
 		-
-			message: "#^Call to an undefined method FilamentFaker\\\\Support\\\\ComponentDecorator\\:\\:getSuggestions\\(\\)\\.$#"
+			message: "#^Call to an undefined method FilamentFaker\\\\Contracts\\\\Decorators\\\\ComponentDecorator\\:\\:getSuggestions\\(\\)\\.$#"
 			count: 1
 			path: src/ComponentDataGenerator.php
 
 		-
 			message: "#^Call to an undefined method Filament\\\\Forms\\\\Components\\\\Field\\:\\:getOptions\\(\\)\\.$#"
 			count: 1
-			path: src/Support/ComponentDecorator.php
+			path: src/Decorators/Component.php
