--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "illuminate/contracts": "^10.0",
         "illuminate/support": "^10.0",
         "livewire/livewire": "^3.0",
-        "spatie/laravel-package-tools": "^1.14.0"
+        "spatie/laravel-package-tools": "^1.14.0",
+        "spatie/laravel-ignition": "^2.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
