--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -12,7 +12,7 @@ parameters:
 
 		-
 			message: "#^Call to an undefined method FilamentFaker\\\\Contracts\\\\Decorators\\\\ComponentDecorator\\:\\:getOptions\\(\\)\\.$#"
-			count: 3
+			count: 1
 			path: src/ComponentDataGenerator.php
 
 		-
@@ -37,5 +37,10 @@ parameters:
 
 		-
 			message: "#^Call to an undefined method FilamentFaker\\\\Decorators\\\\Component\\:\\:state\\(\\)\\.$#"
+			count: 1
+			path: src/Decorators/Component.php
+
+		-
+			message: "#^Call to an undefined method Filament\\\\Forms\\\\Components\\\\Field\\:\\:getSearchResults\\(\\)\\.$#"
 			count: 1
 			path: src/Decorators/Component.php
