--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -44,3 +44,8 @@ parameters:
 			message: "#^Call to an undefined method Filament\\\\Forms\\\\Components\\\\Field\\:\\:getSearchResults\\(\\)\\.$#"
 			count: 1
 			path: src/Decorators/Component.php
+
+		-
+			message: "#^Dead catch \\- InvalidArgumentException is never thrown in the try block\\.$#"
+			count: 1
+			path: src/Support/Faker.php
